# nperf-rs

./: .gitignore  Cargo.toml  Makefile  README.md  nperf-server.csv
.github/workflows/: release.yml
docs/: index.html
src/: cli.rs  display.rs  main.rs  results.rs  servers.rs  stats.rs  ws.rs
src/tests/: download.rs  latency.rs  mod.rs  upload.rs
